--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,5 +1,5 @@
 test:
-  sessions:
+  clients:
     default:
       database: rack-crud-demo
       hosts:
@@ -8,8 +8,10 @@ test:
     raise_not_found_error: false
 
 production:
-  sessions:
+  clients:
     default:
-      uri: <%= ENV['MONGOHQ_URL'] %>
+      database: rack-crud-demo
+      hosts:
+        - <%= ENV['MONGOHQ_URL'] %>
   options:
     raise_not_found_error: false
